--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,22 @@
 body {
     background-color: #f9f7fe;
 }
+
+.main{
+    margin-bottom:30px;
+}
 .app-background {
     background: white;
     max-width: 600px;
     margin: 45px auto;
     box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
     border-radius: 16px;
-    padding: 30px;
+    padding: 30px 30px 50px 30px;
     font-family: "Quicksand", sans-serif;
         font-optical-sizing: auto;
         font-weight: 450;
         font-style: normal;
+        text-align: center;
 }
 
 .search-button {
@@ -33,6 +38,21 @@ body {
     padding: 15px 20px;
 }
 
-.current-city{
+f{
+font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-size: smaller;
+}
+.current-temperature{
+font-family: "Schibsted Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 68px;
+}
 
+.current-temperature-icon{
+    font-size: x-large;
 }
