--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 body {
-    background-color: #f9f7fe;
-}
+background: linear-gradient(89.9deg, rgb(208, 246, 255) 0.1%, rgb(255, 237, 237) 47.9%, rgb(255, 255, 231) 100.2%);}
 
 .main{
     margin-bottom:30px;
@@ -11,7 +10,7 @@ body {
     margin: 45px auto;
     box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
     border-radius: 16px;
-    padding: 30px 30px 50px 30px;
+    padding: 30px 30px 20px 30px;
     font-family: "Quicksand", sans-serif;
         font-optical-sizing: auto;
         font-weight: 450;
@@ -20,7 +19,7 @@ body {
 }
 
 .search-button {
-    background: #885df1;
+    background: #5dc2f1;
     padding: 15px 30px;
     border: none;
     font-size: 16px;
@@ -38,12 +37,23 @@ body {
     padding: 15px 20px;
 }
 
+.percentages{
+    font-weight:bolder;
+    color:crimson;
+    padding:20px 5px;
+    font-size:20px;
+}
+
+
+
 f{
 font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
-    font-size: smaller;
+    font-size: 12px;
+    color:rgba(0, 0, 0, 0.464);
+   
 }
 .current-temperature{
 font-family: "Schibsted Grotesk", sans-serif;
@@ -51,8 +61,14 @@ font-family: "Schibsted Grotesk", sans-serif;
     font-weight: 500;
     font-style: normal;
     font-size: 68px;
+    display:inline-flex;
 }
 
 .current-temperature-icon{
-    font-size: x-large;
+    display:inline-flex;
+    font-size: 68px;
+}
+
+a{
+    color:crimson;
 }
